# shiyu

./: AUDIT-2026-04-22.md  README.md  package-lock.json  package.json  vite.config.ts
docs/: index.html
src/: App.vue  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  models.rs  secure_settings.rs
src-tauri/src/commands/: ai.rs  articles.rs  config_pack.rs  data.rs  ebooks.rs  epub_tools.rs  mod.rs  ocr.rs  sentences.rs  settings.rs  translations.rs  vocabulary.rs
src-tauri/src/repositories/: article_repository.rs  document_translation_repository.rs  ebook_repository.rs  mod.rs  sentence_repository.rs  vocabulary_repository.rs
src/components/: AnnotationForm.vue  AnnotationTooltip.vue  ArticleListPanel.vue  ArticleReader.vue  BookReader.vue  QuickLookupPanel.vue  SelectionPopover.vue  Sidebar.vue
src/composables/: useAnnotation.ts  useAnnotationInteraction.ts  useTextSelection.ts
src/constants/: app.ts
src/services/: api.ts  reviewScheduler.ts
src/stores/: appStore.ts  settingsStore.ts
src/styles/: annotation-highlight.css  article-list.css  article-reader.css  reader-typography.css  vocabulary-view.css
src/types/: document.ts
src/utils/: documentSource.ts  inlineSentenceTranslation.ts  sanitizeHtml.ts  sentenceExplanation.ts  transientWordHighlight.ts
src/views/: ArticlesView.vue  BooksView.vue  DataManagerView.vue  EpubImportView.vue  GuideView.vue  HomeView.vue  SentencesView.vue  SettingsView.vue  VocabularyView.vue
