[package]
name = "shiyu-desktop"
version = "0.3.0"
description = "拾语 - 智能双语英语学习桌面应用"
authors = ["amluckydave"]
edition = "2021"
default-run = "shiyu-desktop"

[lib]
name = "shiyu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full", "sync"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
epub = "2"
html2md = "0.2"
base64 = "0.22"
regex = "1.12.3"
scraper = "0.25.0"
futures-util = "0.3.32"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native"] }
